# SysY-2020-Compiler-For-Rpi4

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
IR/src/: ir.hpp
cgen/: CMakeLists.txt  EmitAsm.cc  Makefile  as.sh  cc.sh  fib.s  hello.c  my.s  my_fib.S  run.sh
cgen/src/: EmitAsm.cc  a.out  asmgen.hpp
cgen/test/: all.sh  as.sh  cc.sh  fib.c  fib.ll  fib.s  hello.ll  hello.s  my.s  my_fib.S  my_hello.S  run.sh  test.c  test.ll  test_no_phi.ll
doc/: SysY 语言定义.md  SysY语言定义.docx  SysY运行时库.docx  ir.md  token.md
lexer/: CMakeLists.txt
lexer/include/: sysy-tree.h
lexer/src/: lex.yy.c  sysy.flex  sysy.y
lexer/test/: func_func_15_array_test3.lxo  func_func_60_while_fibonacci.lxo  func_perf_00_bitset1.lxo  func_perf_01_mm2.lxo  perf_01_mm1.lxo
parser/: CMakeLists.txt
parser/src/: Makefile  sysy.output  sysy.tab.c  sysy.tab.h  sysy.y  sysy_parse.cpp  sysy_parse.hpp
test/: Makefile  README.md  c-testsuite.sh  cs1.c  cs2.c  csmith.sh  csmith_options  edge.rej  filter.py  run.sh  test.c
test/in/: 00034.c  cs2.c  vla.c  vrp-1.c  vrp-4.c  vrp-5.c  vrp-6.c
test/ref/: 00006.lxo  00011.lxo  00023.lxo  00030.lxo  00033.lxo  00041.lxo  00057.lxo  00127.lxo  cs2.lxo  vla.lxo  vrp-1.lxo  vrp-4.lxo  vrp-5.lxo  vrp-6.lxo
test/sysyruntimelibrary/: README.md
