FIND_PACKAGE(FLEX REQUIRED)
option(DEBUG_LEXER "select to use specified function" ON)

if(DEBUG_LEXER)
IF(FLEX_FOUND)
    add_definitions(-DDEBUG_LEXER)
    SET(FlexOutput ${EXECUTABLE_OUTPUT_PATH}/lexer)
    SET(FlexTempOutput ${CMAKE_SOURCE_DIR}/lexer/src/lex.yy.c)
    flex_target(lexer ${PROJECT_SOURCE_DIR}/lexer/src/sysy.flex ${FlexTempOutput})
ENDIF()
add_executable(lexer ${FlexTempOutput} ${FlexOutput})
include_directories(${PROJECT_SOURCE_DIR}/parser/src)
endif(DEBUG_LEXER)